--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
