--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.6",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.4.1",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
