--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.4.1",
     "@types/jsonwebtoken": "^9.0.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
